--- a/manifest.json
+++ b/manifest.json
@@ -18,5 +18,11 @@
 		"default_icon": "icon.png",
 		"default_title": "Volume Control",
 		"default_popup": "popup.html"
+	},
+
+	"commands": {
+		"_execute_browser_action": {
+			"description": "Open volume control"
+		}
 	}
 }
